Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54756

wayland: Qdrag::exec() crashes application

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.2, 5.7.1
    • 5.6, 5.7.0
    • QPA: Wayland
    • None
    • Linux

    Description

      Condition:

      • Qt 5.7 or Qt 5.6
      • using weston as compositor
      • no mouse is connected

      If Drag/Drop is initiated using a touch device, the application crashes in
      Drag::exec() with a SEGFAULT. As soon a mouse is connected, Drag/Drop doesn't
      crash the application any more.

      The attached patch fixes the problem for me

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            johanhelsing Johan Helsing
            k-h.sch Karl-Heinz Schneider
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes