Fix crash when dragging with touch without first having pointer focus

Also add drag-and-drop tests for both touch and mouse.

Task-number: QTBUG-54756
Change-Id: Ibfff48b1f2377022a8624e28e9f638076187ddca
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>