tests/auto/client/mockcompositor.h
@@ -85,6 +85,15 @@ public:
     static void sendTouchUp(void *data, const QList<QVariant> &parameters);
     static void sendTouchMotion(void *data, const QList<QVariant> &parameters);
     static void sendTouchFrame(void *data, const QList<QVariant> &parameters);
+    static void sendDataDeviceDataOffer(void *data, const QList<QVariant> &parameters);
+    static void sendDataDeviceEnter(void *data, const QList<QVariant> &parameters);
+    static void sendDataDeviceMotion(void *data, const QList<QVariant> &parameters);
+    static void sendDataDeviceDrop(void *data, const QList<QVariant> &parameters);
+    static void sendDataDeviceLeave(void *data, const QList<QVariant> &parameters);
+    static void waitForStartDrag(void *data, const QList<QVariant> &parameters);
+
+public:
+    bool m_startDragSeen;
 
 private:
     static void bindCompositor(wl_client *client, void *data, uint32_t version, uint32_t id);
@@ -156,6 +165,12 @@ public:
     void sendTouchMotion(const QSharedPointer<MockSurface> &surface, const QPoint &position, int id);
     void sendTouchUp(const QSharedPointer<MockSurface> &surface, int id);
     void sendTouchFrame(const QSharedPointer<MockSurface> &surface);
+    void sendDataDeviceDataOffer(const QSharedPointer<MockSurface> &surface);
+    void sendDataDeviceEnter(const QSharedPointer<MockSurface> &surface, const QPoint &position);
+    void sendDataDeviceMotion(const QPoint &position);
+    void sendDataDeviceDrop(const QSharedPointer<MockSurface> &surface);
+    void sendDataDeviceLeave(const QSharedPointer<MockSurface> &surface);
+    void waitForStartDrag();
 
     QSharedPointer<MockSurface> surface();
 
