tests/auto/client/tst_client.cpp
@@ -36,6 +36,10 @@
 #include <QBackingStore>
 #include <QPainter>
 #include <QScreen>
+#include <QWindow>
+#include <QMimeData>
+#include <QPixmap>
+#include <QDrag>
 
 #include <QtTest/QtTest>
 
@@ -141,6 +145,8 @@ private slots:
     void createDestroyWindow();
     void events();
     void backingStore();
+    void touchDrag();
+    void mouseDrag();
 
 private:
     MockCompositor *compositor;
@@ -249,6 +255,86 @@ void tst_WaylandClient::backingStore()
 
     // hiding the window should detach the buffer
     QTRY_VERIFY(surface->image.isNull());
+}
+
+class DndWindow : public QWindow
+{
+    Q_OBJECT
+
+public:
+    DndWindow(QWindow *parent = 0)
+        : QWindow(parent)
+        , dragStarted(false)
+    {
+        QImage cursorImage(64,64,QImage::Format_ARGB32);
+        cursorImage.fill(Qt::blue);
+        m_dragIcon = QPixmap::fromImage(cursorImage);
+    }
+    ~DndWindow(){}
+    bool dragStarted;
+
+protected:
+    void mousePressEvent(QMouseEvent *event) Q_DECL_OVERRIDE
+    {
+        if (dragStarted)
+            return;
+        dragStarted = true;
+
+        QByteArray dataBytes;
+        QMimeData *mimeData = new QMimeData;
+        mimeData->setData("application/x-dnditemdata", dataBytes);
+        QDrag *drag = new QDrag(this);
+        drag->setMimeData(mimeData);
+        drag->setPixmap(m_dragIcon);
+        drag->exec(Qt::CopyAction | Qt::MoveAction, Qt::CopyAction);
+    }
+private:
+    QPixmap m_dragIcon;
+};
+
+void tst_WaylandClient::touchDrag()
+{
+    DndWindow window;
+    window.show();
+
+    QSharedPointer<MockSurface> surface;
+    QTRY_VERIFY(surface = compositor->surface());
+
+    compositor->setKeyboardFocus(surface);
+    QTRY_COMPARE(QGuiApplication::focusWindow(), &window);
+
+    const int id = 0;
+    compositor->sendTouchDown(surface, QPoint(10, 10), id);
+    compositor->sendTouchMotion(surface, QPoint(20, 20), id);
+    compositor->sendTouchFrame(surface);
+    compositor->waitForStartDrag();
+    compositor->sendDataDeviceDataOffer(surface);
+    compositor->sendDataDeviceEnter(surface, QPoint(20, 20));
+    compositor->sendDataDeviceMotion( QPoint(21, 21));
+    compositor->sendDataDeviceDrop(surface);
+    compositor->sendDataDeviceLeave(surface);
+    QTRY_VERIFY(window.dragStarted);
+}
+
+void tst_WaylandClient::mouseDrag()
+{
+    DndWindow window;
+    window.show();
+
+    QSharedPointer<MockSurface> surface;
+    QTRY_VERIFY(surface = compositor->surface());
+
+    compositor->setKeyboardFocus(surface);
+    QTRY_COMPARE(QGuiApplication::focusWindow(), &window);
+
+    compositor->sendMousePress(surface, QPoint(10, 10));
+    compositor->sendDataDeviceDataOffer(surface);
+    compositor->sendDataDeviceEnter(surface, QPoint(20, 20));
+    compositor->sendDataDeviceMotion( QPoint(21, 21));
+    compositor->waitForStartDrag();
+    compositor->sendDataDeviceDrop(surface);
+    compositor->sendDataDeviceLeave(surface);
+    QTRY_VERIFY(window.dragStarted);
 }
 
 int main(int argc, char **argv)
